  * Switch to source format 3.0 (quilt).
    - Add debian/source/format.
    - Drop Build-Depends on quilt.
    - Remove /usr/share/cdbs/1/rules/patchsys-quilt.mk from debian/rules.
  * Refresh patches for new upstream release.
  * debian/control.in
    - Drop Build-Depends on dpkg-dev (>= 1.13.19) as even oldstable has a more
      recent version.
    - Add Vcs-Browser and Vcs-Svn fields.

 -- Michael Biebl <biebl@debian.org>  Fri, 23 Jul 2010 00:37:40 +0200

gnome-settings-daemon (2.30.1-1) unstable; urgency=low

  * New upstream release.
  * Bump build-dependencies.
  * 11_sleepkey.patch, 40_xklavier_5.0.patch: dropped, obsolete.
  * 20_gstreamer.patch, 30_pkgconfig-path.patch, 70_relibtoolize.patch: 
    updated for the new version.

 -- Josselin Mouette <joss@debian.org>  Tue, 27 Apr 2010 20:00:27 +0200

gnome-settings-daemon (2.28.1-3) unstable; urgency=low

  * Depend on libgnome2-common for the GConf schemas.
  * 40_xklavier_5.0.patch: new patch. Get 2.28 version to work with 
    libxklavier 5.0.
  * Require said version to build.

 -- Josselin Mouette <joss@debian.org>  Fri, 09 Apr 2010 00:17:00 +0200

gnome-settings-daemon (2.28.1-2) unstable; urgency=low

  * Drop libxxf86misc-dev build-dependency. This extension is only used 
    as a fallback to XKB. Closes: #559690.
  * 12_monitor_network_fs.patch: new patch. Don’t monitor remote 
    filesystems for their free size. Closes: #563592.

 -- Josselin Mouette <joss@debian.org>  Sat, 09 Jan 2010 10:59:14 +0100

gnome-settings-daemon (2.28.1-1) unstable; urgency=low

  * New upstream release.
    - debian/patches/70_relibtoolize.patch:
      + Updated.
  * debian/rules: remove check-dist.mk to upload to unstable.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Thu, 22 Oct 2009 06:08:36 +0200

gnome-settings-daemon (2.28.0-1) experimental; urgency=low

  * Add a watch file.
  * Add a manpage for gnome-settings-daemon, thanks Joshua Cummings!
    Closes: #494370.