@@ -25,7 +25,7 @@ Build-Depends: cdbs,
                libgstreamer0.10-dev (>= 0.10.1.2),
                libgstreamer-plugins-base0.10-dev (>= 0.10.1.2),
                gnome-pkg-tools
-Standards-Version: 3.8.3
+Standards-Version: 3.9.0
 Vcs-Browser: http://svn.debian.org/wsvn/pkg-gnome/desktop/unstable/gnome-settings-daemon/
 Vcs-Svn: svn://svn.debian.org/svn/pkg-gnome/desktop/unstable/gnome-settings-daemon/
 
@@ -36,11 +36,11 @@ Depends: ${shlibs:Depends},
          libgnome2-common
 Replaces: capplets-data (<< 1:2.21.5),
           gnome-control-center (<< 1:2.21.5)
-Conflicts: rhythmbox (<< 0.11.5),
-           banshee (<< 0.13.2+dfsg-7),
-           totem (<< 2.22.0),
-           gnome-control-center (<< 1:2.21.5)
-Breaks: gnome-session (<< 2.24),
+Breaks: rhythmbox (<< 0.11.5),
+        banshee (<< 0.13.2+dfsg-7),
+        totem (<< 2.22.0),
+        gnome-control-center (<< 1:2.21.5)
+        gnome-session (<< 2.24),
         gnome-screensaver (<< 2.28.0)
 Suggests: x11-xserver-utils,
           gnome-screensaver,
@@ -67,7 +67,6 @@ Depends: ${shlibs:Depends},
          ${misc:Depends},
          libdbus-glib-1-dev (>= 0.74),
          libglib2.0-dev (>= 2.17.3)
-Replaces: libgnome-settings-daemon-dev
 Description: Headers for building applications communicating with gnome-settings-daemon
  This package contains header files required to build applications that
  communicate with the GNOME settings daemon over D-Bus.
